--- a/package.json
+++ b/package.json
@@ -2,12 +2,14 @@
   "name": "js-code-interview",
   "version": "1.0.0",
   "description": "react project playgound",
-  "main": "index.js",
   "repository": "git@github.com:kanokgan/js-code-interview.git",
   "author": "kanokgan@gmail.com <kanokgan@gmail.com>",
   "license": "MIT",
+  "engines": {
+    "node": ">=18.17.1"
+  },
   "scripts": {
-    "start": "webpack-dev-server --mode development",
+    "start": "webpack serve",
     "build": "webpack",
     "typecheck": "tsc"
   },
@@ -16,10 +18,12 @@
     "@babel/core": "^7.22.10",
     "@babel/preset-env": "^7.22.10",
     "@babel/preset-react": "^7.22.5",
+    "@babel/preset-typescript": "^7.22.11",
     "@types/react": "^18.2.21",
     "@types/react-dom": "^18.2.7",
     "babel-loader": "^9.1.3",
     "css-loader": "^6.8.1",
+    "html-webpack-plugin": "^5.5.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "style-loader": "^3.3.3",
@@ -27,5 +31,17 @@
     "webpack": "^5.88.2",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
