--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "scripts": {
     "start": "webpack serve",
     "build": "webpack",
+    "test": "jest",
     "typecheck": "tsc"
   },
   "browserslist": {
@@ -35,12 +36,17 @@
     "@babel/preset-env": "^7.22.10",
     "@babel/preset-react": "^7.22.5",
     "@babel/preset-typescript": "^7.22.11",
+    "@types/enzyme": "^3.10.13",
+    "@types/jest": "^29.5.4",
     "@types/react": "^18.2.21",
     "@types/react-dom": "^18.2.7",
     "babel-loader": "^9.1.3",
     "css-loader": "^6.8.1",
     "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.7",
+    "enzyme-to-json": "^3.6.2",
     "html-webpack-plugin": "^5.5.3",
+    "jest": "^29.6.4",
     "style-loader": "^3.3.3",
     "typescript": "^5.1.6",
     "webpack": "^5.88.2",
